apply {
    plugin 'java'
}

allprojects {

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    sourceSets.main.java.srcDirs = ['src/main/java']
    sourceSets.test.java.srcDirs = ['src/test/java']

    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

    repositories {
        mavenCentral()
    }

    group = 'Isac_and_Davide'
    version = '1.1'

    apply from: "$rootProject.projectDir/dependencies.gradle"

}

subprojects {
    apply {
        plugin 'java'
        plugin 'java-library'
        plugin 'application'
    }

    dependencies {
        testImplementation Junit5['jupiter']
        testRuntimeOnly Junit5['jupiter-platform-launcher']
    }

    test {
        useJUnitPlatform()
    }
}

def distributionDir = "$rootProject.projectDir/readyToDistribute"

clean {
    delete distributionDir
}

tasks.register('mergeDocs', Copy) {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    from subprojects.collect { it.tasks.withType(Javadoc) }
    into "$distributionDir/javadoc"
}
